# FLX

./: .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE.txt  README.md  Settings.Application.props  Settings.Header.props  Settings.Lib.props  Settings.Shared.props  flx.sln
CORE/: CMakeLists.txt
CORE/include/flx/: assert.hpp  core.hpp  core_cfg.hpp  core_crt.hpp  core_crt_assert.hpp  core_crt_ctype.hpp  core_crt_errno.hpp  core_crt_fenv.hpp  core_crt_float.hpp  core_crt_inttypes.hpp  core_crt_locale.hpp  core_crt_math.hpp  core_crt_setjmp.hpp  core_crt_stdbool.hpp  core_crt_stdint.hpp  core_crt_stdlib.hpp  core_crt_time.hpp  core_env.hpp  core_opt.hpp
FLX Test/: FLX Test.vcxproj  FLX Test.vcxproj.filters
FLX Test/include/: flx_tests.hpp
FLX Test/resource/: flx.asm  std.asm
FLX Test/source/: flx_tests.cpp  main.cpp  test_h.cpp
TEST/: CMakeLists.txt  main.cpp
concepts/: concepts.vcxproj  concepts.vcxproj.filters
concepts/include/: concepts.hpp
dynamic_array/: dynamic_array.vcxproj  dynamic_array.vcxproj.filters
dynamic_array/include/: dynamic_array.hpp
flx_concepts/: flx_concepts.vcxproj  flx_concepts.vcxproj.filters
flx_concepts/include/: flx_concepts.hpp
flx_concepts/source/: flx_concepts.cpp
flx_dynamic_array/: flx_dynamic_array.vcxproj  flx_dynamic_array.vcxproj.filters
flx_dynamic_array/include/: flx_dynamic_array.hpp
flx_dynamic_array/source/: flx_dynamic_array.cpp
flx_linked_list/: flx_linked_list.vcxproj  flx_linked_list.vcxproj.filters
flx_linked_list/include/: flx_linked_list.hpp
flx_linked_list/source/: flx_linked_list.cpp
flx_math/: flx_math.vcxproj  flx_math.vcxproj.filters
flx_math/include/: flx_math.hpp
flx_math/source/: flx_math.cpp
flx_new/: flx_new.vcxproj  flx_new.vcxproj.filters
flx_new/include/: flx_new.hpp
flx_new/source/: flx_new.cpp
flx_test/: flx_test.vcxproj  flx_test.vcxproj.filters  main.cpp  test.cpp
flx_test/resources/: flx_asm.asm  std_asm.asm
flx_timer_windows/: flx_timer_windows.vcxproj  flx_timer_windows.vcxproj.filters
flx_timer_windows/include/: flx_timer_windows.hpp
flx_timer_windows/source/: flx_timer_windows.cpp
flx_tui/: flx_tui.vcxproj  flx_tui.vcxproj.filters
flx_tui/include/: flx_tui.hpp  imp_flx_tui_base.hpp  imp_flx_tui_controller.hpp  imp_flx_tui_controller_windows.hpp  imp_flx_tui_display.hpp  imp_flx_tui_display_windows.hpp  imp_flx_tui_encoding.hpp  imp_flx_tui_window.hpp
flx_tui/resources/: CP437 chars.txt  TUI Layout Constraints.txt  TUI Structure.txt  UTF-16 Chars.txt  tui_structure.txt
flx_tui/source/: flx_tui.cpp  imp_flx_tui_base.cpp  imp_flx_tui_controller.cpp  imp_flx_tui_controller_windows.cpp  imp_flx_tui_display_windows.cpp  imp_flx_tui_encoding.cpp  imp_flx_tui_window.cpp
flx_type_traits/: flx_type_traits.vcxproj  flx_type_traits.vcxproj.filters
flx_type_traits/include/: flx_type_traits.hpp
flx_type_traits/source/: flx_type_traits.cpp
flx_types/: flx_types.vcxproj  flx_types.vcxproj.filters
flx_types/include/: flx_types.hpp
flx_types/source/: flx_types.cpp
flx_unique_ptr/: flx_unique_ptr.vcxproj  flx_unique_ptr.vcxproj.filters
flx_unique_ptr/include/: flx_unique_ptr.hpp
flx_unique_ptr/source/: flx_unique_ptr.cpp
flx_utility/: flx_utility.vcxproj  flx_utility.vcxproj.filters
flx_utility/include/: flx_utility.hpp
flx_utility/source/: flx_utility.cpp
flx_vec/: flx_vec.vcxproj  flx_vec.vcxproj.filters
flx_vec/include/: flx_vec.hpp
flx_vec/source/: flx_vec.cpp
imp_core/: imp_core.vcxproj  imp_core.vcxproj.filters
imp_core/include/: imp_core.hpp
memory/: memory.vcxproj  memory.vcxproj.filters
new/: new.vcxproj  new.vcxproj.filters
type_traits/: type_traits.vcxproj  type_traits.vcxproj.filters
utility/: utility.vcxproj  utility.vcxproj.filters
(+30 files in other folders)
